# MLIP_Screening

./: .gitignore  README.md  pyproject.toml
configs/: equiformer.yaml  mace.yaml  nequip.yaml  orb.yaml  sevennet.yaml  uma.yaml
data/example_fullNa/: Na12Co1Cr1Fe1Mn9O24.cif
data/example_halfNa/: Na12Co1Cr1Fe1Mn9O24_halfNa.cif
environments/: base.yml  mace.yml  nequip.yml  orb.yml  sevennet.yml  uma.yml
scripts/: merge_results.py  run_relaxations.py  submit_slurm_array.sh
src/mlip_screening/: __init__.py  calculators.py  io.py  relax.py  utils.py
