[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mlip-screening"
version = "0.1.0"
description = "MLIP relaxation workflow for full-Na and half-Na oxide CIF structures"
requires-python = ">=3.10"
dependencies = [
    "ase",
    "pandas",
    "openpyxl",
    "pyyaml",
    "tqdm",
    "huggingface_hub",
]

[tool.setuptools.packages.find]
where = ["src"]
